[project]
name = "movie-night-roll"
version = "0.1.0"
description = "Quick project to randomly select movie for movie night"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-core>=2.19.2",
    "google-api-python-client>=2.143.0",
    "google-auth-oauthlib>=1.2.1",
    "google>=3.0.0",
]
